Fixed overflow.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -176,6 +176,7 @@ p {
     font-weight: 500;
     margin-bottom: 2em;
     color: #547488;
+    overflow-wrap: break-word;
 }
 
 label {
